libs/shared/infra/src/kustomize/overlays/dev/namespace.yaml
# Copyright (c) 2023-2024 Codyslexia
# @license MIT
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
